fix dark mode pop up

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root{
   --body_background: white;
   --body_color: black;
-  --link-color:#333333;
+  --link-color:#686868;
   --container-color:rgba(0, 0, 0, 0.2);
   --text-color:black;
   --text2-color:rgb(255, 255, 255);
